2006-06-12  Ville Vainio  <vivainio@gmail.com>

	* ipy_profile_sh.py: applied Krisha Mohan Gundu's patch for
	allowing $variable interpolation within multiline statements, 
	though so far only with "sh" profile for a testing period.
	The patch also enables splitting long commands with \ but it 
	doesn't work properly yet.

2006-06-12  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ibrowse.py (_dodisplay): Display the length of the
	input history and the position of the cursor in the input history for
	the find, findbackwards and goto command.

2006-06-10  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ibrowse.py: Add a class _CommandInput that
	implements the basic functionality of browser commands that require
	input. Reimplement the goto, find and findbackwards commands as
	subclasses of _CommandInput. Add an input history and keymaps to those
	commands. Add "\r" as a keyboard shortcut for the enterdefault and
	execute commands.

2006-06-07  Ville Vainio  <vivainio@gmail.com>

	* iplib.py: ipython mybatch.ipy exits ipython immediately after
	running the batch files instead of leaving the session open.

2006-06-07  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (InteractiveShell.__init__): update BSD fix, as
	the original fix was incomplete.  Patch submitted by W. Maier.

2006-06-07  Ville Vainio  <vivainio@gmail.com>

	* iplib.py,Magic.py, ipmaker.py (magic_rehashx): 
	Confirmation prompts can be supressed by 'quiet' option. 
	_ip.options.quiet = 1 means "assume yes for all yes/no queries".

2006-06-06  *** Released version 0.7.2

2006-06-06  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Release.py (version): Made 0.7.2 final for release.
	Repo tagged and release cut.

2006-06-05  Ville Vainio  <vivainio@gmail.com>

	* Magic.py (magic_rehashx): Honor no_alias list earlier in 
	%rehashx, to avoid clobbering builtins in ipy_profile_sh.py
	
	* upgrade_dir.py: try import 'path' module a bit harder